force-app/main/default/objects/Financials_Calculation__mdt/Financials_Calculation__mdt.object-meta.xml
<CustomObject>
    <description>Use this metadata to create the UI of financials.</description>
    <label>Financials Calculation</label>
    <pluralLabel>Financials Calculation</pluralLabel>
</CustomObject>