force-app/main/default/objects/Financials_Calculation__mdt/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>