force-app/main/default/objects/Financials_Calculation__mdt/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReadOnly</label>
    <type>Checkbox</type>
</CustomField>