force-app/main/default/objects/Financials_Calculation__mdt/fields/LabelName__c.field-meta.xml
<CustomField>
    <fullName>LabelName__c</fullName>
    <label>LabelName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>