force-app/main/default/objects/Financials_Calculation__mdt/listViews/Financials_Calculation.listView-meta.xml
<ListView>
    <fullName>Financials_Calculation</fullName>
    <columns>MasterLabel</columns>
    <columns>LabelName__c</columns>
    <columns>Row__c</columns>
    <columns>Field_Api_Name__c</columns>
    <columns>Formula__c</columns>
    <columns>IsReadOnly__c</columns>
    <filterScope>Everything</filterScope>
    <label>Financials Calculation</label>
</ListView>